--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "product_catalog_mui",
-  "homepage": ".",
+  "homepage": "http://.",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +17,11 @@
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
     "classnames": "^2.5.1",
+    "express": "^4.19.2",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -38,5 +42,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
